src/index.css
@import "tailwindcss";

@font-face {
  font-family: 'Inter';
  src: url('../src/assets/fonts/InterVariable.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

/* Cargar la fuente Inter Bold */
@font-face {
  font-family: 'Inter';
  src: url('../src/assets/fonts/InterVariable.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

/* See tailwind variables here https://tailwindcss.com/docs/theme */
@theme {
  /* The peruanistas red color */
  --color-primary: #c4320a;
  --color-primary-border: #A31818;
  --color-on-primary: #f7f7f7;
  --color-border: #d6d6d6;

  /* Horizontal padding for pages */
  --spacing-page: 16px;
}

:root {
  color-scheme: light;
  font-size: 16px;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@media (min-width: 640px) {
  :root {
    --spacing-page: 24px;
  }
}

@media (min-width: 968px) {
  :root {
    --spacing-page: 32px;
  }
}

@media (min-width: 1280px) {
  :root {
    --spacing-page: 64px;
  }
}

@media (min-width: 1536px) {
  :root {
    --spacing-page: 64px;
  }
}


*, *::before, *::after {
  box-sizing: border-box;
}

body {
  font-family: 'Inter', sans-serif;
  margin: 0;
  padding: 0;
  color: var(--font-color);
}

